--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,7 +15,7 @@
 			data-sap-ui-resourceroots='{"ssms": "./"}'>
 		</script>
 
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<!--<link rel="stylesheet" type="text/css" href="css/style.css">-->
 
 		<script>
 			sap.ui.getCore().attachInit(function() {
